@@ -1,0 +1,1 @@
+<p>{$pickupPointLabel}: <strong>{$pickupPointName}</strong></p>
