@@ -1,0 +1,3 @@
+<section class="box">
+    <p>{$pickupPointLabel}: <strong>{$pickupPointName}</strong></p>
+</section>
