@@ -48,3 +48,4 @@
 2.1.6 - Fixed: front.js
       - Added: information about pickup point or address delivery carrier into order administration
         and possibility to change pickup point using widget
+      - Added: information about chosen pickup point to order confirmation, e-mail and history detail
